--- a/2014/scss/base/_colors.scss
+++ b/2014/scss/base/_colors.scss
@@ -1,7 +1,7 @@
 $white: #fff;
 $black: #000;
 $gray: rgba($black, 0.6);
-$gray-light: rgba($black, 0.4);
+$gray-light: rgba($black, 0.5);
 $gray-xlight: rgba($black, 0.2);
 
 $blue: #2da4cc;
@@ -11,4 +11,5 @@ $red: #a00;
 $red-light: rgba($red, 0.8);
 $red-dark: #950000;
 
-$light-brown: #ffc62a;
+$brown: #ffc62a;
+$brown-light: rgba($brown, 0.5);
