--- a/2014/css/application.css
+++ b/2014/css/application.css
@@ -1264,7 +1264,7 @@ nav, .page nav {
 /* line 6, ../scss/modules/_nav.scss */
 nav ul, .page nav ul {
   display: inline-block;
-  border: solid 1px #aa0000;
+  border: solid 1px rgba(0, 0, 0, 0.2);
   margin: 0;
   padding: 0;
   -webkit-border-radius: 8px;
@@ -1278,7 +1278,7 @@ nav ul li, .page nav ul li {
   display: inline-block;
   margin: 0;
   padding: 0;
-  border-left: solid 1px #aa0000;
+  border-left: solid 1px rgba(0, 0, 0, 0.2);
 }
 /* line 18, ../scss/modules/_nav.scss */
 nav ul li:first-child, .page nav ul li:first-child {
@@ -1290,7 +1290,7 @@ nav ul li:before, .page nav ul li:before {
 }
 /* line 22, ../scss/modules/_nav.scss */
 nav ul li a, .page nav ul li a {
-  color: #aa0000;
+  color: rgba(0, 0, 0, 0.6);
   display: block;
   padding: 0 10px;
   text-transform: lowercase;
@@ -1298,7 +1298,7 @@ nav ul li a, .page nav ul li a {
 /* line 28, ../scss/modules/_nav.scss */
 nav ul li a:hover, .page nav ul li a:hover {
   border-bottom: none;
-  color: #2da4cc;
+  color: #aa0000;
 }
 
 /* line 1, ../scss/pages/_tickets.scss */
