--- a/2014/scss/application.scss
+++ b/2014/scss/application.scss
@@ -19,7 +19,7 @@
 
 @include border-box-sizing;
 
-html{ background: #FEF0C4 url('../images/texture.png') center center repeat-y;}
+html{ background: #FEF0C4 url('../images/texture.png')  repeat-y center center;}
 body { position: relative;}
 
 .home p {
