Update homepage; fix image gallery background

--- a/2014/css/application.css
+++ b/2014/css/application.css
@@ -1167,7 +1167,7 @@ header h3 a:hover {
   right: 0;
   z-index: 10;
   background: transparent url("../images/gallery-divider.png") no-repeat top center;
-  background-size: 100% auto;
+  background-size: 100% 100%;
 }
 /* line 25, ../scss/modules/_gallery.scss */
 .image-gallery figure {
