--- a/2014/scss/modules/_gallery.scss
+++ b/2014/scss/modules/_gallery.scss
@@ -19,7 +19,7 @@
     right: 0;
     z-index: 10;
     background: transparent url('../images/gallery-divider.png') no-repeat top center;
-    background-size: 100% auto;
+    background-size: 100% 100%;
   }
 
   figure{
