--- a/2014/scss/modules/_header.scss
+++ b/2014/scss/modules/_header.scss
@@ -12,32 +12,26 @@ header{
 
   h1{
     display: block;
-    width: 100%;
+    width: 18%;
     font-weight: bold;
-    padding: 8% 0 0 0;
+    padding: 5% 0% 8% 0%;
     margin: 0;
   
     a{
       color: $red;
       display: block;
-      font-size: 100px;
+      font-size: 70px;
       line-height: 0.9em;
       border: none;
       font-family: "bello-pro", georgia, serif;
       @include text-shadow(1px 1px 1px rgba(black, 0.2));
 
-      @media screen and (max-width: 900px){font-size: 76px;}
-      @media screen and (max-width: 800px){font-size: 68px;}
-      @media screen and (max-width: 700px){font-size: 54px; font-weight: normal;}
-      @media screen and (max-width: 600px){font-size: 47px;}
-      @media screen and (max-width: 500px){font-size: 34px;}
-
       span{ display: block;}
 
       &:before{
-        content: "";margin: 0 auto 20px auto;
-        @media screen and (min-width: 900px){ @include sprite-background('logo-large');}
-        @media screen and (max-width: 900px){ @include sprite-background('logo'); margin-bottom: 12px;}
+        content: "";
+        margin: 0 auto 12px auto;
+        @include sprite-background('logo');
       }
 
       &:hover{
