--- a/2014/scss/pages/_tickets.scss
+++ b/2014/scss/pages/_tickets.scss
@@ -1,8 +1,18 @@
-.buy-tickets {
+.tickets .page {
+  max-width: 1320px;
+}
+
+.terms {
   max-width: 640px;
   margin: 0 auto 48px;
   padding: 36px 20px 24px;
   position: relative;
+  float: left;
+}
+
+.page p.tagline {
+  padding: 36px 0 0 0;
+  text-align: center;
 
   &:before {
     position: absolute;
@@ -19,12 +29,15 @@
       background: none;
     }
   }
+}
 
-    
-  iframe {
-    max-width: 640px;
-    margin: 12px auto 24px;
-    @include box-shadow(0 0 6px 0 rgba(black, 0.3));
-    @include border-radius(4px);
-  }
+.page iframe {
+  max-width: 640px;
+  height: 670px;
+  margin: 75px auto auto;
+  @include box-shadow(0 0 6px 0 rgba(black, 0.3));
+  @include border-radius(4px);
+  float: right;
+
+  //@media screen and (max-width: 700px) { height: 640px;}
 }
