--- a/2014/scss/modules/_button.scss
+++ b/2014/scss/modules/_button.scss
@@ -1,4 +1,5 @@
 .button{
+  position: relative;
   display: inline-block;
   font-size: 26px;
   line-height: 32px;
@@ -10,7 +11,7 @@
   text-align: center;
   width: 270px;
   @include border-radius(8px);
-  
+
   &:hover{ border: solid 2px; color: $blue;}
 
   &.important{
@@ -20,4 +21,32 @@
 
     &:hover{color: $blue;}
   }
+
+  span.tooltip{
+    position: absolute;
+    display: block;
+    bottom: -42px;
+    font-size: 16px;
+    text-align: center;
+    width: 200px;
+    left: -1000em;
+    margin-left: -100px;
+    background: $blue;
+    color: $white;
+
+    @include border-radius(4px);
+
+    &:before{
+      content: "";
+      display: block;
+      position: absolute;
+      top: -12px;
+      left: 50%;
+      margin-left: -6px;
+      border: solid 6px transparent;
+      border-bottom-color: $blue;
+    }
+  }
+
+  &:hover span.tooltip{left: 50%;}
 }
