--- a/2014/css/application.css
+++ b/2014/css/application.css
@@ -1029,7 +1029,7 @@ header h1 {
   width: 18%;
   font-weight: bold;
   padding: 5% 0% 8% 0%;
-  margin: 0;
+  margin: 0 auto;
 }
 /* line 20, ../scss/modules/_header.scss */
 header h1 a {
@@ -1572,7 +1572,7 @@ body {
   margin: 0 auto;
   max-width: 960px;
   position: relative;
-  top: -200px;
+  top: -110px;
 }
 /* line 34, ../scss/application.scss */
 .page ul {
