--- a/2014/scss/modules/_header.scss
+++ b/2014/scss/modules/_header.scss
@@ -15,8 +15,8 @@ header{
     width: 18%;
     font-weight: bold;
     padding: 5% 0% 8% 0%;
-    margin: 0;
-  
+    margin: 0 auto;
+
     a{
       color: $red;
       display: block;
